# PythonTennisTestExample

./: LICENSE.rst  README.rst  setup.cfg  tox.ini
.github/workflows/: main.yml
tennis/: tennis.py
tests/: test_tennis.py
