[metadata]
name = the_tennis_game
version = attr: tennis.VERSION
description = My package description
long_description = file: README.rst, LICENSE.rst
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find: